# medical_dialogues_evaluation

./: .gitignore  Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml
src/medical_dialogues_scoring/: __main__.py  config.py
src/medical_dialogues_scoring/models/: scoring_endpoint.py
src/medical_dialogues_scoring/routers/: api.py
src/medical_dialogues_scoring/services/: scoring.py
tests/: evaluation_script.py  evaluation_set_results.csv
