[project]
name = "medical-dialogues-scoring"
version = "0.1.0"
description = "Web Service for Medical Dialogues Scoring"
authors = [
    { name = "Aleksei Kalmykov", email = "kalmykoalexey01@gmail.com" },
]
requires-python = ">=3.13, <3.14"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.3.4",
    "langchain>=0.2.6",
    "langchain-openai>=0.1.14",
    "pandas>=2.2.0",
    "aiohttp>=3.9.1",
]

[dependency-groups]
dev = [
    "black == 24.8.0",
    "flake8 == 7.1.1",
    "isort == 5.13.2",
    "mypy == 1.11.2",
]
debug = [
    "debugpy >= 1.8.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/medical_dialogues_scoring"]

